--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "login.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node login.js"
   },
   "repository": {
     "type": "git",
